<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrafficAlertApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_driving">Start Driving</string>
    <string name="stop_driving">Stop Driving</string>
    <string name="button1">button1</string>
    <string name="welcome_msg">Click on Start Driving to get automatic traffic alerts</string>
    <string name="text_view1">text_view1</string>
    <string name="text_view2">text_view2</string>
    <string name="button2">button2</string>
    <string name="start_alerts">Start Alerts</string>
    <string name="start_alerts_message">Click below to  start traffic alerts</string>
    <string name="Alerts">Get Recent Traffic Alerts</string>

</resources>