<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.trafficalertapplication.MainActivity" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view1"
        android:text="@string/start_driving" />

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:text="@string/start_alerts_message"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view2"
        android:text="@string/start_alerts" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:text="@string/Alerts" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button3"
        android:background="@android:color/transparent"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView11"
                android:layout_width="fill_parent"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="#dcdcdc"
                android:gravity="center"
                android:padding="0dip"
                android:text="Area"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView13"
                android:layout_width="fill_parent"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="#dcdcdc"
                android:gravity="center"
                android:padding="0dip"
                android:text="Time"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView21"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="#a09f9f"
                android:gravity="center"
                android:padding="0dip"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView23"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="#a09f9f"
                android:gravity="center"
                android:padding="0dip"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView31"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="#dcdcdc"
                android:gravity="center"
                android:padding="0dip"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/TextView33"
                android:layout_margin="2dip"
                android:layout_weight="1"
                android:background="#dcdcdc"
                android:gravity="center"
                android:padding="0dip"
                android:textColor="#000000" />
        </TableRow>
    </TableLayout>

</RelativeLayout>